# lbo-stack

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  FLAKE8_COMPLIANCE_SUMMARY.md  FLAKE8_FINAL_STATUS.md  LICENSE  README.md  cli.py  compare_models.py  create_latest_pdf.py  final_validation.py  generate_final_analysis.py  lbo_cli.py  packages.txt  pyproject.toml  requirements.txt  setup.py  streamlit_app.py  test_enhanced.py  test_model.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: lbo_sample.json  sensitivity_sample.json  waterfall_sample.json
data/: accor_assumptions.csv  accor_historical.csv  accor_historical_recreated.csv  fund_input.json  sample_lbo.json
docs/templates/: report.html
docs/vp_enhancement/: EBITDAR_APPENDIX.md  ENHANCEMENT_SUMMARY.md  README.md  README_VP_ENHANCEMENT.md  (+3 more)
output/: dcf_summary.csv  exit_multiple_sensitivity.csv  fund_waterfall.csv  growth_vs_multiple_IRR.csv  lbo_schedule.csv  sensitivity_2d.csv  sensitivity_exit.csv  sensitivity_exit_multiple.csv
scripts/: README.md  compare_models.py  create_latest_pdf.py  final_validation.py  generate_final_analysis.py  generate_final_pdf.py  generate_internal_memo_pdf.py  generate_latest_pdf.py  generate_pdf_with_fixes.py  generate_pe_vp_pdf.py
tests/: test_cashflow.py  test_core.py  test_enhanced.py  test_exit.py  test_fund_waterfall.py  test_invariants.py  test_lbo_model.py  test_lbo_units.py  test_model.py  test_orchestrator.py  test_semantic_fix.py  test_semantic_fix_clean.py  test_sensitivity.py  test_vp_direct.py  test_vp_feedback.py
(+13 files in other folders)
